--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Double Circle Drawing Animation</title>
+    <title>BMCIT Club</title>
     <link rel="icon" href="./images/bmc-it-club-circle-logo.png" type="image/x-icon">
     <style>
         * {
