--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         }
 
         .text {
-            font-size: 1.2rem;
+            font-size: 1.35rem;
             fill: black;
             font-weight: bold;
             opacity: 0;
@@ -128,7 +128,7 @@
         }
 
         .igniting .text {
-            font-size: 0.7rem;
+            font-size: 0.65rem;
             font-weight: bold;
         }
 
@@ -184,21 +184,21 @@
                 clip-path="url(#inner-circle-clip)" />
 
             <!-- igniting the nation -->
-            <svg width="200" height="150" class="bmc-text">
-                <path id="curve" d="M 20 90 Q 150 0 160 120" fill="transparent" />
+            <svg width="200" height="200" class="bmc-text">
+                <path id="curve" d="M 45 100 A 50 50 0 0 1 155 100" fill="transparent" />
                 <text class="text" text-anchor="middle">
                     <textPath class="text__path" xlink:href="#curve" startOffset="50%">BMC IT Club</textPath>
                 </text>
             </svg>
 
             <svg width="200" height="200" class="igniting">
-                <path id="curved" d="M 0 50 Q 100 290 200 50" fill="transparent" />
+                <path id="curved" d="M 35 100 A 50 50 0 0 0 165 100" fill="transparent" />
                 <text class="text" text-anchor="middle">
-                    <textPath class="text__path" xlink:href="#curved" startOffset="50%">igniting technological
-                        excellence
-                    </textPath>
+                    <textPath class="text__path" xlink:href="#curved" startOffset="50%">Igniting technological
+                        excellence</textPath>
                 </text>
             </svg>
+
 
         </svg>
         <svg width="80" height="40" xmlns="http://www.w3.org/2000/svg" class="ribbon-right">
